moved bindings to separate folder

--- a/config/dependencies.ini
+++ b/config/dependencies.ini
@@ -18,7 +18,9 @@ libs : gsl gslcblas
 [boost]
 check_headers : boost/python.hpp
 libs : boost_python
+core : False
 
 [python]
 check_headers : pyconfig.h
 libs : python
+core : False
