--- a/bindings/SConscript
+++ b/bindings/SConscript
@@ -12,7 +12,7 @@ if "RPATH" in env and env["RPATH"] != "":
     buildenv.Append(LINKFLAGS = "-rpath " + ",".join(str(l) for l in env["RPATH"]))
 buildenv.Append(CPPPATH = '#/src')
 buildenv.Append(CPPPATH = '#/pybind11/include')
-buildenv.Append(CXXFLAGS = ' -std=c++11')
+buildenv.Append(CXXFLAGS = ' -std=c++0x')
 shlib = buildenv.SharedLibrary('oxsx', ['oxsx_pybind.cpp'],
                                SHLIBSUFFIX='.so', SHLIBPREFIX='')
 
