add python version check

--- a/bindings/SConscript
+++ b/bindings/SConscript
@@ -1,9 +1,16 @@
 #!/usr/bin/env python
 import os
+import sys
 from distutils.sysconfig import get_python_lib, get_python_inc
 
 Import('env')
 buildenv = env.Clone()
+
+# First check we're using the correct python version
+version = sys.version_info
+if version[0] == 2 and version[1] < 7:
+    print('!! OXSX python bindings require python 2.7')
+    Exit(0)
 
 # Have to include all cpp files (unless we add to the list each time)
 buildenv.Append(LIBPATH = '#/build')
