--- a/bindings/SConscript
+++ b/bindings/SConscript
@@ -21,16 +21,8 @@ buildenv.Append(CPPPATH = '#/src')
 buildenv.Append(CPPPATH = [get_python_inc(), '#/pybind11/include'])
 buildenv.Append(CXXFLAGS = ['-std=c++11'])
 
-# Another Mac / Linux discrepancy:
-# Macs can import the module through the PYTHONPATH
-# Linux seems to require the LD_LIBRARY_PATH
-if buildenv["SYSTEM"] == "Darwin":
-    shlib_prefix = ""
-else:
-    shlib_prefix = "lib"
-
 shlib = buildenv.SharedLibrary('oxsx', ['oxsx_pybind.cpp'],
-                               SHLIBSUFFIX='.so', SHLIBPREFIX=shlib_prefix)
+                               SHLIBSUFFIX='.so', SHLIBPREFIX="")
 
 # Install to pythonpath
 install_dir = get_python_lib()
